--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 ext {
     commonVersion = System.properties['commonVersion'] ?: '0-SNAPSHOT'
     infraVersion = System.properties['infraVersion'] ?: '0-SNAPSHOT'
-    refDataVersion = System.properties['refDataVersion'] ?: '0-SNAPSHOT'
+    refDataVersion = System.properties['refDataVersion'] ?: '1.0.0.+'
 
     schemasContractVersion = "2.1.7"
 
@@ -47,6 +47,7 @@ allprojects {
     }
 
     dependencies {
+        testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
         testCompile "junit:junit:4.+"
         testCompile "org.mockito:mockito-core:${mockitoVersion}"
     }
