INTYG-8170: Använd snapshot av refdata som default.

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -27,6 +27,9 @@ db.password=
 db.port=3306
 db.pool.maxSize=20
 
+# resources (texts) from classpath
+resources.folder=classpath:
+
 # Hibernate stuff
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.hbm2ddl.auto=
