--- a/web/build.gradle
+++ b/web/build.gradle
@@ -35,7 +35,7 @@ gretty {
     debugSuspend = false
 
     jvmArgs = [
-            "-Dresources.folder=classpath:",
+            "-Dlogback.file=classpath:logback-ocp.xml",
             "-Dspring.profiles.active=" + springProfiles,
             "-Dcatalina.base=${buildDir}/catalina.base",
             "-Drecipient.config.file=${projectDir}/recipients-dev.json",
