BUILDENV: Use refdata 1.0-SNAPSHOT

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -35,6 +35,7 @@ gretty {
     debugSuspend = false
 
     jvmArgs = [
+            "-Dresources.folder=classpath:",
             "-Dlogback.file=classpath:logback-ocp.xml",
             "-Dspring.profiles.active=" + springProfiles,
             "-Dcatalina.base=${buildDir}/catalina.base",
