INTYG-7052: Merge from develop.

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -38,10 +38,10 @@ hibernate.format_sql=false
 
 # JMS configuration
 #activemq.broker.url=tcp://localhost:61616?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
-activemq.broker.url=vm://localhost?broker.persistent=false
+activemq.broker.url=tcp://localhost:61616
 activemq.broker.username=
 activemq.broker.password=
-activemq.destination.queue.name=certificate.queue
+activemq.destination.queue.name=dev.statistik.utlatande.queue
 activemq.internal.notification.queue.name=internal.notification.queue
 
 # NTjP SSL
