--- a/devops/openshift/demo/configmap-vars.yaml
+++ b/devops/openshift/demo/configmap-vars.yaml
@@ -7,7 +7,7 @@ data:
   NTJP_WS_CERTIFICATE_TYPE: "PKCS12"
   NTJP_WS_TRUSTSTORE_FILE: "${certificate.folder}/truststore.jks"
   NTJP_WS_TRUSTSTORE_TYPE: "JKS"
-  ACTIVEMQ_BROKER_URL: "${activemq.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2"
+  ACTIVEMQ_BROKER_URL: "${broker.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2"
   ACTIVEMQ_DESTINATION_QUEUE_NAME: "demo.statistik.utlatande.queue"
   STATISTICS_ENABLED: "false"
   REDIS_HOST: "${redis.service.host}"
