INTYGFV-11721: Filter för att skydda /internalapi tillagt. Tjänsten returnerar nu en fillständig relationsgraf

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile "se.inera.intyg.infra:hsa-integration:${infraVersion}"
     compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
     compile "se.inera.intyg.infra:monitoring:${infraVersion}"
+    compile "se.inera.intyg.infra:security-filter:${infraVersion}"
 
     compile "se.inera.intyg.common:common-support:${commonVersion}"
     compile "se.inera.intyg.common:integration-util:${commonVersion}"
