--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -25,5 +25,7 @@ db.pool.maxSize=5
 # Spring profile "embedded" activates a H2 console on this port
 db.httpPort=8082
 
+internal.api.port=8080
+
 ntjp.base.url=http://localhost:8080/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
