--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -36,6 +36,9 @@ hibernate.hbm2ddl.auto=
 hibernate.show_sql=false
 hibernate.format_sql=false
 
+# Internal API
+internal.api.port=8081
+
 # JMS configuration
 #activemq.broker.url=tcp://localhost:61616?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
 activemq.broker.url=vm://localhost?broker.persistent=false
