BUILDENV: Uppdaterat urlen till repos så att vi cachar jcenter dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -40,11 +40,14 @@ allprojects {
     apply plugin: 'maven'
 
     repositories {
-        jcenter()
         mavenLocal()
-        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/snapshots/" }
-        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
-        maven { url "http://repo.maven.apache.org/maven2" }
+        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/public/" }
+        jcenter {
+            content {
+                // this repository contains everything BUT artifacts with group starting with "se.inera"
+                excludeGroupByRegex "se\\.inera.*"
+            }
+        }
     }
 
     dependencies {
