--- a/devops/openshift/demo/configmap-vars.yaml
+++ b/devops/openshift/demo/configmap-vars.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  SPRING_PROFILES_ACTIVE: "test,it-fk-stub,it-ts-stub,testability-api,wc-hsa-stub,caching-enabled"
+  SPRING_PROFILES_ACTIVE: "test,it-fk-stub,it-ts-stub,it-af-stub,testability-api,wc-hsa-stub,caching-enabled"
   NTJP_BASE_URL: "http://127.0.0.1:8080/inera-certificate/stubs"
   INFRASTRUCTURE_DIRECTORY_LOGICALADDRESS: "SE165565594230-1000"
   NTJP_WS_CERTIFICATE_FILE: "${certificate.folder}/demo.intygstjanst.intygstjanster.se.p12"
