--- a/web/build.gradle
+++ b/web/build.gradle
@@ -16,9 +16,8 @@ war.dependsOn createVersionPropertyFile
 gretty {
     def springProfiles = 'dev,embedded,testability-api,caching-enabled,it-fk-stub,wc-hsa-stub'
 
-    servletContainer = 'jetty9'
+    servletContainer = 'tomcat9'
     contextPath = '/inera-certificate'
-    contextConfigFile = file("src/main/webapp/WEB-INF/jetty-web.xml")
 
     integrationTestTask = null
     scanInterval = 0
