--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -40,10 +40,10 @@ hibernate.format_sql=false
 internal.api.port=8081
 
 # JMS configuration
-activemq.broker.url=tcp://localhost:61616?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
-#activemq.broker.url=vm://localhost?broker.persistent=false
-activemq.broker.username=system
-activemq.broker.password=manager
+#activemq.broker.url=tcp://localhost:61616?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
+activemq.broker.url=vm://localhost?broker.persistent=false
+activemq.broker.username=
+activemq.broker.password=
 activemq.destination.queue.name=certificate.queue
 activemq.internal.notification.queue.name=internal.notification.queue
 
