--- a/web/build.gradle
+++ b/web/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
     compile "se.inera.intyg.infra:hsa-integration:${infraVersion}"
+    compile "se.inera.intyg.infra:pu-integration:${infraVersion}"
     compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
     compile "se.inera.intyg.infra:monitoring:${infraVersion}"
     compile "se.inera.intyg.infra:security-filter:${infraVersion}"
