--- a/devops/openshift/test/configmap-vars.yaml
+++ b/devops/openshift/test/configmap-vars.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  SPRING_PROFILES_ACTIVE: "test,testability-api,caching-enabled,it-fk-stub,it-ts-stub,wc-hsa-stub,it-af-stub"
+  SPRING_PROFILES_ACTIVE: "test,testability-api,caching-enabled,it-fk-stub,it-ts-stub,wc-hsa-stub,it-af-stub,wc-pu-stub"
   NTJP_WS_CERTIFICATE_FILE: "${certificate.folder}/demo.intygstjanst.intygstjanster.se.p12"
   NTJP_WS_CERTIFICATE_TYPE: "PKCS12"
   NTJP_WS_TRUSTSTORE_FILE: "${certificate.folder}/truststore.jks"
