INTGFV-12005: Java11,Spring5,BOM. Builds,runs,passes all tests

--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -40,6 +40,6 @@ sonarqube {
 dependencies {
     runtime project(':intygstjanst-persistence')
 
-    runtime "mysql:mysql-connector-java:${mysqlVersion}"
-    runtime "org.liquibase:liquibase-core:${liquibaseVersion}"
+    runtime "mysql:mysql-connector-java"
+    runtime "org.liquibase:liquibase-core"
 }
