--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,24 @@ allprojects {
     }
 
     dependencies {
+        // Exclude and import of non-BOM version of Hibernate due to
+        // bug in BOM-version 5.4.12.
+        compile("org.hibernate:hibernate-core") {
+            version {
+                strictly "${hibernateVersion}"
+            }
+        }
+        compile("org.hibernate:hibernate-hikaricp") {
+            version {
+                strictly "${hibernateVersion}"
+            }
+        }
+        compile("org.hibernate:hibernate-entitymanager") {
+            version {
+                strictly "${hibernateVersion}"
+            }
+        }
+
         testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
         testCompile "junit:junit:4.+"
         testCompile "org.mockito:mockito-core"
