INTYGFV-12005: Added NO_PROXY for build environment

--- a/devops/openshift/test/configmap-envvar.properties
+++ b/devops/openshift/test/configmap-envvar.properties
@@ -3,3 +3,5 @@ NTJP_WS_CERTIFICATE_FILE=${certificate.folder}/localhost.p12
 NTJP_WS_CERTIFICATE_TYPE=PKCS12
 NTJP_WS_TRUSTSTORE_FILE=${certificate.folder}/truststore.jks
 NTJP_WS_TRUSTSTORE_TYPE=JKS
+NO_PROXY=*
+no_proxy=*
