INTYGFV-12005: Fixed MySQL and Hibernate driver and URL props

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -20,8 +20,8 @@
 # Default configuration for all environments
 
 # Default DB (MySQL) configuration
-db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false
+db.driver=com.mysql.cj.jdbc.Driver
+db.url=jdbc:mysql://${db.server}:${db.port}/${db.name}?useSSL=false&serverTimezone=Europe/Stockholm
 db.username=
 db.password=
 db.port=3306
@@ -31,7 +31,7 @@ db.pool.maxSize=20
 resources.folder=classpath:
 
 # Hibernate stuff
-hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 hibernate.hbm2ddl.auto=
 hibernate.show_sql=false
 hibernate.format_sql=false
