--- a/web/build.gradle
+++ b/web/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile "se.inera.intyg.infra:security-filter:${infraVersion}"
     compile "se.inera.intyg.infra:intyginfo:${infraVersion}"
     compile "se.inera.intyg.infra:testcertificate:${infraVersion}"
+    compile "se.inera.intyg.infra:message:${infraVersion}"
 
     compile "se.inera.intyg.common:common-support:${commonVersion}"
     compile "se.inera.intyg.common:integration-util:${commonVersion}"
