INTYGFV-13367: Moved to BF nexus

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ pluginManagement {
         //Uncomment line below during development of gradle-intyg-plugin
         //mavenLocal()
 
-        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/public/" }
+        maven { url "https://nexus.drift.inera.se/repository/it-public/" }
         gradlePluginPortal()
     }
 }
