INTYGFV-12452: Set logging refs to use infra

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -84,7 +84,7 @@
 
   <!-- Listener for external logback configuration file -->
   <listener>
-      <listener-class>se.inera.intyg.common.util.logging.LogbackConfiguratorContextListener</listener-class>
+      <listener-class>se.inera.intyg.infra.monitoring.logging.LogbackConfiguratorContextListener</listener-class>
   </listener>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
