--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -46,6 +46,7 @@ activemq.broker.username=
 activemq.broker.password=
 activemq.destination.queue.name=certificate.queue
 activemq.internal.notification.queue.name=internal.notification.queue
+populate.loader.queueName=populateIT.loader.queue
 
 # NTjP SSL
 # TODO
