--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -17,15 +17,19 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-db.driver=org.h2.Driver
-db.url=jdbc:h2:mem:dataSource;MODE=MySQL;IGNORECASE=TRUE;DB_CLOSE_DELAY=-1
-db.username=sa
+db.server = localhost
+db.port = 3306
+db.name = intyg
+db.username = intyg
+db.password = intyg
 db.pool.maxSize=5
 
-# Spring profile "embedded" activates a H2 console on this port
+# Spring profile "h2" activates a H2 console on this port
 db.httpPort=8082
 
-internal.api.port=8080
+internal.api.port=${dev.http.port.internal}
 
-ntjp.base.url=http://localhost:8080/inera-certificate/stubs
+redis.password=redis
+
+ntjp.base.url=http://localhost:${dev.http.port}/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
