INTYGFV-12083: Intygstjanst properties cleanup

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2016 Inera AB (http://www.inera.se)
+# Copyright (C) 2020 Inera AB (http://www.inera.se)
 #
 # This file is part of sklintyg (https://github.com/sklintyg).
 #
@@ -17,7 +17,23 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-# NTjP SSL config (Unused, since we are using local stubs)
+db.server = localhost
+db.port = 3306
+db.name = intyg
+db.username = intyg
+db.password = intyg
+db.pool.maxSize=5
+
+# Spring profile "h2" activates a H2 console on this port
+db.httpPort=8082
+
+internal.api.port=${dev.http.port.internal}
+
+redis.password=redis
+
+ntjp.base.url=http://localhost:${dev.http.port}/inera-certificate/stubs
+infrastructure.directory.logicalAddress=stub
+
 ntjp.ws.certificate.password = dummy
 ntjp.ws.key.manager.password = dummy
 ntjp.ws.truststore.password = dummy
