--- a/devops/openshift/test/configmap-envvar.properties
+++ b/devops/openshift/test/configmap-envvar.properties
@@ -1,7 +1,16 @@
-SPRING_PROFILES_ACTIVE=test,testability-api,caching-enabled,it-fk-stub,it-ts-stub,wc-hsa-stub,it-af-stub,wc-pu-stub
-NTJP_WS_CERTIFICATE_FILE=${certificate.folder}/localhost.p12
-NTJP_WS_CERTIFICATE_TYPE=PKCS12
-NTJP_WS_TRUSTSTORE_FILE=${certificate.folder}/truststore.jks
-NTJP_WS_TRUSTSTORE_TYPE=JKS
+ACTIVEMQ_BROKER_URL=${broker.amq.tcp.port}?jms.nonBlockingRedelivery=true&jms.redeliveryPolicy.maximumRedeliveries=3&jms.redeliveryPolicy.maximumRedeliveryDelay=6000&jms.redeliveryPolicy.initialRedeliveryDelay=4000&jms.redeliveryPolicy.useExponentialBackOff=true&jms.redeliveryPolicy.backOffMultiplier=2
+ACTIVEMQ_DESTINATION_QUEUE_NAME=perf.certificate.queue
+DB_NAME=${database.name}
+DB_PORT=${mysql.service.port}
+DB_SERVER=${mysql.service.host}
+INFRASTRUCTURE_DIRECTORY_LOGICALADDRESS=stub
 NO_PROXY=*
+NTJP_BASE_URL=http://localhost:8080/inera-certificate/stubs
+NTJP_WS_CERTIFICATE_FILE=${application.dir}/certifikat/localhost.p12
+NTJP_WS_CERTIFICATE_TYPE=PKCS12
+NTJP_WS_TRUSTSTORE_FILE=${application.dir}/certifikat/truststore.jks
+NTJP_WS_TRUSTSTORE_TYPE=JKS
+REDIS_HOST=${redis.service.host}
+REDIS_PORT=${redis.service.port}
+SPRING_PROFILES_ACTIVE=test,testability-api,caching-enabled,it-fk-stub,it-ts-stub,wc-hsa-stub,it-af-stub,wc-pu-stub
 no_proxy=*
