--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -27,9 +27,6 @@ db.password=
 db.port=3306
 db.pool.maxSize=20
 
-# resources (texts) from classpath
-resources.folder=classpath:
-
 # Hibernate stuff
 hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 hibernate.hbm2ddl.auto=
@@ -60,7 +57,7 @@ ntjp.ws.truststore.type=JKS
 # Dynamic texts
 #
 #################################################
-texts.file.directory=${resources.folder}/texts/
+texts.file.directory=classpath:/texts/
 texts.update.cron= 0 0 0 * * *
 
 # Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env.
