--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -43,6 +43,7 @@ activemq.broker.username=
 activemq.broker.password=
 activemq.destination.queue.name=certificate.queue
 activemq.internal.notification.queue.name=internal.notification.queue
+populate.loader.queueName=populateIT.loader.queue
 
 # NTjP SSL
 # TODO
