--- a/web/build.gradle
+++ b/web/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     compile "se.riv.itintegration.monitoring:itintegration-monitoring-schemas:${rivtaItintegrationMonitoringSchemasVersion}"
 
     compile "se.inera.intyg.schemas:schemas-contract:${schemasContractVersion}"
-    compile "se.inera.intyg.infra:hsa-integration:${infraVersion}"
+    compile "se.inera.intyg.infra:hsatk-integration:${infraVersion}"
     compile "se.inera.intyg.infra:pu-integration:${infraVersion}"
     compile "se.inera.intyg.infra:sjukfall-engine:${infraVersion}"
     compile "se.inera.intyg.infra:monitoring:${infraVersion}"
