INTYGFV-13831: Added new setting if Intygstjansten should use the new query based on CertificateMetaData or not. By default it is not used, because it requires migration of data first. In local development environment it is used per default.

--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -34,6 +34,8 @@ redis.password=redis
 ntjp.base.url=http://localhost:${dev.http.port}/inera-certificate/stubs
 infrastructure.directory.logicalAddress=stub
 
-ntjp.ws.certificate.password = dummy
-ntjp.ws.key.manager.password = dummy
-ntjp.ws.truststore.password = dummy
+ntjp.ws.certificate.password=dummy
+ntjp.ws.key.manager.password=dummy
+ntjp.ws.truststore.password=dummy
+
+use.certificate.metadata.query=true
