--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -128,11 +128,14 @@ hsa.healhcareunitmembers.cache.expiry=86400
 # Recipient update schedule
 #
 ################################################
-recipients.update.cron = 0 0 0 * * *
-recipient.file = ${recipient.config.file}
+recipients.update.cron=0 0 0 * * *
+recipient.file=${recipient.config.file}
 
 # Temporary hack for mitigating fullstandigtNamn issues in ANP when sending answers.
 fk7263.send.medical.certificate.answer.force.fullstandigtnamn=true
 
 # Use old format v1 or new v3 when sending TsBas RegisterCertificate to recipient
 tsbas.send.certificate.to.recipient.registercertificate.version=v3
+
+# Setting that decides if
+use.certificate.metadata.query=
