--- a/devops/dev/config/application-dev.properties
+++ b/devops/dev/config/application-dev.properties
@@ -38,4 +38,5 @@ ntjp.ws.certificate.password=dummy
 ntjp.ws.key.manager.password=dummy
 ntjp.ws.truststore.password=dummy
 
+# Setting that decides if the new CertificateMetaData query should be used or not
 use.certificate.metadata.query=true
