INTYGFV-14368: Updating version of H2 to non-BOM version.

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ ext {
 
     cxfVersion = "3.2.4"
     geronimoJmsVersion = "1.1.1"
+    h2Version = "2.1.210"
     hibernateVersion = "5.3.15.Final" // included because of bug in BOM version 5.4.12
     jadiraUserTypeVersion = "6.0.1.GA"
     javaxActivationVersion = "1.2.0"
