--- a/build.gradle
+++ b/build.gradle
@@ -128,10 +128,20 @@ allprojects {
         compile "jakarta.xml.ws:jakarta.xml.ws-api"
         compile "jakarta.jws:jakarta.jws-api:${jakartaJwsApiVersion}"
         compile "com.sun.xml.messaging.saaj:saaj-impl"
+        compileOnly 'org.projectlombok:lombok'
 
         testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
         testCompile "junit:junit:4.+"
         testCompile "org.mockito:mockito-core"
+        testCompile "org.junit.jupiter:junit-jupiter-api"
+        testCompile "org.junit.jupiter:junit-jupiter-params"
+        testCompile "org.mockito:mockito-junit-jupiter"
+        testCompileOnly 'org.projectlombok:lombok'
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+        testRuntimeOnly "org.junit.vintage:junit-vintage-engine"
+
+        annotationProcessor 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
     }
 
     group = 'se.inera.intyg.intygstjanst'
