--- a/tools/liquibase-runner/build.gradle
+++ b/tools/liquibase-runner/build.gradle
@@ -15,8 +15,9 @@ startScripts {
         }
 
         def originalWindowsScript = windowsScript.text
-        windowsScript.text = windowsScript.text.replaceAll(/.LiquibaseCommandLine/, ".LiquibaseCommandLine --driver=com.mysql.cj.jdbc.Driver " +
-                "--classpath=lib/${persistenceDependency} --changeLogFile=changelog/changelog.xml --logLevel=info")
+        windowsScript.text = windowsScript.text.replaceAll(/.LiquibaseCommandLine/, ".LiquibaseCommandLine "
+                + "--driver=com.mysql.cj.jdbc.Driver --classpath=lib/${persistenceDependency} --changeLogFile=changelog/changelog.xml "
+                + "--logLevel=info")
         if (originalWindowsScript == windowsScript.text) {
             throw new RuntimeException("No replacement seems to have been made to the windows liquibase script.")
         }
@@ -43,6 +44,6 @@ dependencies {
     compile "info.picocli:picocli:${picocliVersion}"
     runtime "mysql:mysql-connector-java"
     runtime "org.liquibase:liquibase-core"
-    runtime "org.liquibase.ext:liquibase-hibernate5:" +liquibaseVersion
+    runtime "org.liquibase.ext:liquibase-hibernate5:" + liquibaseVersion
     runtime project(':intygstjanst-persistence')
 }
