--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id "se.inera.intyg.plugin.common" version "3.1.4" apply false
-    id "org.gretty" version "3.0.1" apply false
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id "se.inera.intyg.plugin.common" version "3.2.0" apply false
+    id "org.gretty" version "3.0.8" apply false
+    id "io.spring.dependency-management" version "1.0.13.RELEASE" apply false
 }
 
 ext {
-    commonVersion = System.properties['commonVersion'] ?: '3.17.2-SNAPSHOT'
-    infraVersion = System.properties['infraVersion'] ?: '3.17.2-SNAPSHOT'
+    commonVersion = System.properties['commonVersion'] ?: '3.18.0-SNAPSHOT'
+    infraVersion = System.properties['infraVersion'] ?: '3.18.0-SNAPSHOT'
     refDataVersion = System.properties['refDataVersion'] ?: '1.0-SNAPSHOT'
 
     schemasContractVersion = "2.1.8"
@@ -16,18 +16,15 @@ ext {
     rivtaClinicalprocessSchemasVersion = "4.0.5"
     rivtaItintegrationMonitoringSchemasVersion = "1.0.0.5"
 
-    cxfVersion = "3.2.4"
+    cxfVersion = "3.5.3"
     geronimoJmsVersion = "1.1.1"
-    h2Version = "2.1.210"
-    hibernateVersion = "5.3.15.Final" // included because of bug in BOM version 5.4.12
-    springFrameworkVersion = "5.2.20.RELEASE" // included because of vulnerability (CVE-2022-22965) in 5.2.4.RELEASE
     jadiraUserTypeVersion = "6.0.1.GA"
-    javaxActivationVersion = "1.2.0"
-    jakartaJwsApiVersion = "2.1.0"
-    stAntlr4Version = "4.3"
-    shedlockSpringVersion = "4.5.0"
+    jakartaJwsApiVersion = "3.0.0"
+    picocliVersion = "4.6.3"
+    stAntlr4Version = "4.3.4"
+    shedlockSpringVersion = "4.42.0"
 
-    springbootMavenBomVersion = "2.2.5.RELEASE"
+    springbootMavenBomVersion = "2.7.3"
 }
 
 allprojects {
@@ -53,76 +50,6 @@ allprojects {
     }
 
     dependencies {
-        // Exclude and import of non-BOM version of Hibernate due to
-        // bug in BOM-version 5.4.12.
-        compile("org.hibernate:hibernate-core") {
-            version {
-                strictly "${hibernateVersion}"
-            }
-        }
-        compile("org.hibernate:hibernate-hikaricp") {
-            version {
-                strictly "${hibernateVersion}"
-            }
-        }
-        compile("org.hibernate:hibernate-entitymanager") {
-            version {
-                strictly "${hibernateVersion}"
-            }
-        }
-        // Exclude and import of non-BOM version of Spring Framework due to
-        // vulnerability (CVE-2022-22965) in BOM-version 5.2.4.RELEASE.
-        compile("org.springframework:spring-web") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-webmvc") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-aop") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-beans") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-context") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-core") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-expression") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-jms") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-tx") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-        compile("org.springframework:spring-messaging") {
-            version {
-                strictly "${springFrameworkVersion}"
-            }
-        }
-
         compile "javax.annotation:javax.annotation-api"
         compile "jakarta.xml.bind:jakarta.xml.bind-api"
         compile "jakarta.xml.ws:jakarta.xml.ws-api"
@@ -131,7 +58,7 @@ allprojects {
         compileOnly 'org.projectlombok:lombok'
 
         testCompile "se.inera.intyg.refdata:refdata:${refDataVersion}"
-        testCompile "junit:junit:4.+"
+        testCompile "junit:junit"
         testCompile "org.mockito:mockito-core"
         testCompile "org.junit.jupiter:junit-jupiter-api"
         testCompile "org.junit.jupiter:junit-jupiter-params"
