INTYGFV-14370: Activated junit5 in restassured tests. Adjusted urls in certificate erase tests.

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ allprojects {
         }
     }
 
+    test {
+        useJUnitPlatform()
+    }
+
     dependencyManagement {
         imports {
             mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
