INTYGFV-14370: Adjusted actuator url to not have ending / and restassured urls to have starting /. To align with pipeline actuator url.

--- a/web/build.gradle
+++ b/web/build.gradle
@@ -8,7 +8,7 @@ test {
 task restAssuredTest(type: Test) {
     outputs.upToDateWhen { false }
     systemProperty "integration.tests.baseUrl", System.properties['baseUrl'] ?: "http://localhost:8080/"
-    systemProperty "integration.tests.actuatorUrl", System.properties['actuatorUrl'] ?: "http://localhost:8180/"
+    systemProperty "integration.tests.actuatorUrl", System.properties['actuatorUrl'] ?: "http://localhost:8180"
     include '**/*IT*'
     useJUnitPlatform()
 }
